--- a/k8/backend-deployment.yaml
+++ b/k8/backend-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: anupsharma/backend:latest
+          image: anupsharma329/backend:v2.02
           ports:
             - containerPort: 5001
           env:
@@ -36,17 +36,17 @@ spec:
             httpGet:
               path: /health
               port: 5001
-            initialDelaySeconds: 30
-            periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
+            initialDelaySeconds: 60
+            periodSeconds: 30
+            timeoutSeconds: 10
+            failureThreshold: 5
           readinessProbe:
             httpGet:
               path: /health
               port: 5001
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            timeoutSeconds: 3
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
             failureThreshold: 3
           imagePullPolicy: Always
 ---
@@ -63,5 +63,6 @@ spec:
   ports:
     - port: 5001
       targetPort: 5001
+      nodePort: 30081
       protocol: TCP
-  type: ClusterIP
+  type: NodePort
