--- a/k8/configmap.yaml
+++ b/k8/configmap.yaml
@@ -4,6 +4,54 @@ metadata:
   name: app-config
   namespace: fullstack-app
 data:
-  NODE_ENV: "production"
-  PORT: "5001"
-  REACT_APP_API_URL: "http://backend-svc:5001/api"
+   nginx.conf: |
+      worker_processes auto;
+      events { worker_connections 1024; }
+
+      http {
+        include       mime.types;
+        default_type  application/octet-stream;
+        sendfile      on;
+        keepalive_timeout  65;
+
+        upstream backend_upstream {
+          server backend-svc:5001 max_fails=3 fail_timeout=30s;
+          keepalive 16;
+          }
+
+      server {
+        listen 80;
+
+      # Proxy API requests to backend (preserve /api prefix)
+      location /api/ {
+        proxy_pass         http://backend_upstream;
+        proxy_http_version 1.1;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 60s;
+        
+        # Handle backend unavailability gracefully
+        proxy_intercept_errors on;
+        error_page 502 503 504 = @fallback;
+      }
+      
+      # Fallback location for when backend is down
+      location @fallback {
+        return 503 '{"error": "Backend service temporarily unavailable"}';
+        add_header Content-Type application/json;
+      }
+
+      # Frontend (React dev server)
+      location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri /index.html;   
+      }
+
+      }
+      }
+
+
