--- a/k8/frontend-deployment.yaml
+++ b/k8/frontend-deployment.yaml
@@ -1,65 +1,74 @@
-apiVersion: apps/v1
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: frontend-deployment
+  name: nginx
   namespace: fullstack-app
   labels:
-    app: frontend
+    app: nginx     
 spec:
-  replicas: 2
   selector:
     matchLabels:
-      app: frontend
-  template:
+      app: nginx
+  replicas: 1 # tells deployment to run 2 pods matching the template
+  template: # create pods using pod definition in this template
     metadata:
+      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
+      # generated from the deployment name
       labels:
-        app: frontend
+        app: nginx     
     spec:
+      initContainers:
+        - name: wait-for-backend
+          image: busybox:1.28
+          command: ['sh', '-c', 'until nslookup backend-svc.fullstack-app.svc.cluster.local; do echo waiting for backend service; sleep 2; done;']
       containers:
-        - name: frontend
-          image: anupsharma/frontend:latest
+        - name: nginx
+          image: anupsharma329/frontend:v2.02
           ports:
-            - containerPort: 80
-          env:
-            - name: REACT_APP_API_URL
-              value: "http://backend-svc:5001/api"
-          resources:
-            requests:
-              memory: "64Mi"
-              cpu: "50m"
-            limits:
-              memory: "128Mi"
-              cpu: "100m"
-          livenessProbe:
+          - containerPort: 80        
+          volumeMounts:
+            - name: nginx-config
+              mountPath: /etc/nginx/nginx.conf
+              subPath: nginx.conf
+          startupProbe:
             httpGet:
               path: /
               port: 80
             initialDelaySeconds: 30
             periodSeconds: 10
-            timeoutSeconds: 5
-            failureThreshold: 3
+            failureThreshold: 30
           readinessProbe:
             httpGet:
               path: /
               port: 80
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
             periodSeconds: 5
             timeoutSeconds: 3
             failureThreshold: 3
-          imagePullPolicy: Always
+      volumes:
+        - name: nginx-config
+          configMap:
+            name: app-config
+            items:
+              - key: nginx.conf     # Specify which key to use
+                path: nginx.conf
+
 ---
+
+# Single Frontend Service - NodePort for both internal and external access
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend-svc
   namespace: fullstack-app
   labels:
-    app: frontend
+    app: nginx
 spec:
   selector:
-    app: frontend
+    app: nginx
   ports:
     - port: 80
       targetPort: 80
+      nodePort: 30080  # External access: http://<node-ip>:30080
       protocol: TCP
-  type: ClusterIP
+  type: NodePort
